@@ -25,6 +25,12 @@ class C_Queue extends B_Controller
      */
     public function A_index()
     {
+        $this->view()->setLayout('dashboard');
+
+        $id = $this->session()->user_profile_id;
+        $blogs = UserBlog::findByUser($id, $enabled=true);
+        $this->view()->blogs = $blogs;
+        $this->view()->settings = UserDashboard::getByUser($id);
     }
 
     /**
