@@ -1,0 +1,204 @@
+#maincontainer
+{
+    overflow: hidden; /* avoid scrollbars */
+}
+
+#queuecontainer
+{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 900px;
+    height: 500px;
+    margin-left: -1px;
+    border: 1px solid gray;
+}
+#queueheader
+{
+    height: 61px;
+    line-height: 61px;
+    background-color: silver;
+    border-bottom: 1px solid gray;
+    margin-top: -1px;
+}
+div.headersep
+{
+    float: right;
+    border-right: 2px solid gray;
+    margin-right: 10px;
+    padding-left: 10px;
+}
+div.headerlabel
+{
+    float: right;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+#queueheadertitle
+{
+    float: left;
+    padding-left: 15px;
+    font-size: 22px;
+    text-transform: capitalize;
+}
+div.queuepubbtn
+{
+    float: right;
+    width: 36px;
+    height: 32px;
+    line-height: 10px;
+    padding-top: 5px;
+    font-size: 9px;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 12px;
+    margin-left: 5px;
+    color: white;
+    background-color: gray;
+    cursor: pointer;
+    cursor: hand;
+}
+#enqueuecontainer
+{
+    float: right;
+    height: 20px;
+    line-height: 20px;
+    margin-top: 6px;
+}
+#enqueuecontainer td
+{
+    text-align: center;
+    white-space: nowrap;
+}
+#intervalcontainer
+{
+    float: right;
+    height: 20px;
+    line-height: 20px;
+    margin-top: 6px;
+    margin-right: 10px;
+}
+#intervalcontainer td
+{
+    text-align: center;
+    white-space: nowrap;
+}
+
+
+#queueheaderclear
+{
+    clear: both;
+}
+
+#queuemiddle
+{
+    height: 500px;
+    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-top: 2px;
+}
+
+/* ARTICLE */
+
+div.article
+{
+    line-height: 30px;
+    padding-top: 3px;
+    background-color: whitesmoke;
+}
+div.articleclosed
+{
+    border: 2px solid white;
+    border-bottom: 1px solid lightgray;
+}
+div.articleopen
+{
+    border: 2px solid navy;
+    border-bottom: 1px solid white;
+    border-collapse: collapse;
+    margin-top: -2px;
+}
+div.articlebutton
+{
+    float: left;
+    width: 40px;
+    margin-right: 5px;
+    margin-top: -3px;
+    line-height: 40px;
+    text-align: center;
+}
+div.articlehead
+{
+    margin-right: 240px;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+div.articlesource
+{
+    color: gray;
+    font-size: small;
+    line-height: 15px;
+}
+div.articletitle
+{
+    font-size: 14pt;
+    line-height: 20px;
+}
+div.articletitle a
+{
+    text-decoration: none;
+    font-weight: bold;
+}
+div.articleinfo
+{
+    float: right;
+    margin-top: -33px;
+    margin-right: 50px;
+}
+div.articlelinks
+{
+    float: right;
+    margin-top: -33px;
+    margin-right: 15px;
+}
+a.articleview
+{
+    text-decoration: none;
+    font-weight: bold;
+}
+div.articleclear
+{
+    clear: both;
+}
+
+/* CONTENT */
+
+div.content
+{
+    border: 2px solid navy;
+    border-top: 2px solid white;
+    padding: 0px 15px 15px 15px;
+    border-collapse: collapse;
+    margin-top: -3px;
+}
+div.contentauthor
+{
+    color: gray;
+    font-size: small;
+    padding-bottom: 10px;
+}
+div.contenttitle
+{
+    color: #404040;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 0px 10px 0px;
+}
+div.contentbody
+{
+    padding: 5px 0px 5px 0px;
+}
