@@ -59,5 +59,6 @@ HORAS TRABALHADAS: 2h
 ==========
 
 - reader (bugfixes)
+- inclusao do layout do queue
 
-HORAS TRABALHADAS: 5h
+HORAS TRABALHADAS: 7h
